# autosend-python-sdk

./: .gitignore  README.md  pyproject.toml
autosend/: __init__.py  client.py  errors.py
autosend/resources/: contacts.py  sending.py
