[project]
name = "autosend-shreya-sdk"
version="1.1.0"
description = "Unofficial Autosend Email API SDK (Python) by Shreya Pandey"
readme = "README.md"
authors = [
    { name = "Shreya Pandey", email = "shreyap2702@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/shreyap2702/autosend-python-sdk"
Repository = "https://github.com/shreyap2702/autosend-python-sdk"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
